test/indexOutOfBounds14.slq
// args: --run

def main(){
	x:=0:int[3];
	return x[4]; /// error
}
